Bug 401857 - Color selector RGB spinners superseded by enforced palette colors?
Summary: Color selector RGB spinners superseded by enforced palette colors?
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Color Selectors (show other bugs)
Version: git master (please specify the git hash!)
Platform: Appimage Linux
: NOR normal
Target Milestone: ---
Assignee: Halla Rempt
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2018-12-07 12:08 UTC by mvowada
Modified: 2018-12-08 14:11 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed In:


Attachments
(Video) (253.85 KB, video/mp4)
2018-12-07 12:08 UTC, mvowada
Details

Note You need to log in before you can comment on or make changes to this bug.
Description mvowada 2018-12-07 12:08:30 UTC
Created attachment 116736 [details]
(Video)

(krita-4.2.0-pre-alpha-f735708-x86_64.appimage - Ubuntu 14.04, Unity)

Tested with the recent "Enforce palette colors" feature disabled.

    1. fresh configs
    2. open the foreground color selector
    3. keep clicking on the RGB spinners.

Actual Results: RGB values will suddenly jump to the enforced palette color (video).
Expected Results: not let enforced palette colors to interfere with the RGB spinners.


Note: not reproducible with Krita 4.1.6
Comment 1 Halla Rempt 2018-12-08 14:11:22 UTC
Git commit c924daec586521bd7d27c8cf90573a4433c4b6ce by Boudewijn Rempt.
Committed on 08/12/2018 at 14:11.
Pushed by rempt into branch 'master'.

Follow the config settings for selecting the nearest palette color

M  +2    -1    libs/widgets/KisDlgInternalColorSelector.cpp

https://commits.kde.org/krita/c924daec586521bd7d27c8cf90573a4433c4b6ce