Follow the config settings for selecting the nearest palette color

BUG:401857